tests/baselines/reference/reassignStaticProp.errors.txt
tests/cases/compiler/reassignStaticProp.ts(5,12): error TS2300: Duplicate identifier 'bar'.
tests/cases/compiler/reassignStaticProp.ts(5,12): error TS2403: Subsequent variable declarations must have the same type.  Variable 'bar' must be of type 'number', but here has type 'string'.


==== tests/cases/compiler/reassignStaticProp.ts (2 errors) ====
    class foo {
     
        static bar = 1;
     
        static bar:string; // errror - duplicate id
               ~~~
!!! error TS2300: Duplicate identifier 'bar'.
               ~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'bar' must be of type 'number', but here has type 'string'.
     
    }
     
     
    
    